<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codigoj.liciu.SignupActiviy">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_launcher"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_signup_with"
                android:textSize="@dimen/textSize_Titles"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/btn_marginTop_Normal"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_button_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_signup_with_email"
                android:textSize="@dimen/textSize_Titles"
                android:layout_marginBottom="@dimen/paddingLeftRight_icon"
                android:layout_marginTop="@dimen/margin_bottom_top_image"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
            <EditText
                android:id="@+id/birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_birthdate"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true" />
            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_gender"
                android:inputType="textPassword"/>
            <Spinner
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/pref_gender_titles"
                android:spinnerMode="dropdown">
            </Spinner>
            <CheckBox
                android:id="@+id/cbPolitics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingRight="@dimen/paddingLeftRight_button"
                android:paddingLeft="@dimen/paddingLeftRight_button"
                android:textAllCaps="false"
                android:textSize="@dimen/textSize_Button"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:background="@drawable/btn_login"
                android:layout_marginTop="@dimen/layout_marginTop_button_form"
                android:textColor="@android:color/white"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
