<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.codigoj.liciu.AboutActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/appbar_padding_top"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollbars = "vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="260dp"
                android:layout_height="260dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:src="@drawable/nav_header_main"/>
            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/appbar_padding_top"
                android:paddingBottom="@dimen/appbar_padding_top"
                android:text="@string/tv_version"
                android:layout_gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvNameEcreations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/appbar_padding_top"
                    android:textSize="28dp"
                    android:text="@string/tv_name_ecreations"
                    android:layout_gravity="center_horizontal" />
                <TextView
                    android:id="@+id/tvAllRightsReserved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_all_rights_reserved"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="@dimen/paddingTop_cardview_pub"/>
                <TextView
                    android:id="@+id/tvTitleCreditsDevelopment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/appbar_padding_top"
                    android:text="@string/tvTitleCreditsDevelopment"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal" />
                <TextView
                    android:id="@+id/tvNamesCreditsDevelopment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvNameJhon"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="@dimen/paddingTop_cardview_pub"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_about"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
