<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codigoj.liciu.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_launcher"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_title_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in_like"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/textSize_Titles"/>
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebook_button_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp" />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_title_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:layout_marginTop="32dp"
                android:textSize="@dimen/textSize_Titles"
                android:layout_marginBottom="@dimen/layout_margin"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingRight="@dimen/paddingLeftRight_button"
                android:paddingLeft="@dimen/paddingLeftRight_button"
                android:textAllCaps="false"
                android:textSize="@dimen/textSize_Button"
                android:layout_height="wrap_content"
                android:text="@string/btn_log_in"
                android:background="@drawable/btn_login"
                android:layout_marginTop="@dimen/layout_marginTop_button_form"
                android:textColor="@android:color/white"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
