<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1dp"
    tools:context="com.codigoj.liciu.PublicationActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">

            <include layout="@layout/publication"
                android:id="@+id/card">
            </include>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/card"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:id="@+id/tv_coupons_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_coupons_available"/>
                <Button
                    android:id="@+id/btn_reserve_coupon"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:paddingRight="@dimen/paddingLeftRight_button"
                    android:paddingLeft="@dimen/paddingLeftRight_button"
                    android:textAllCaps="false"
                    android:textSize="@dimen/textSize_Button"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_reserve_coupon"
                    android:background="@drawable/btn_login"
                    android:onClick="viewReserveCoupons"
                    android:layout_marginTop="@dimen/btn_marginTop_Normal"
                    android:textColor="@android:color/white"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
                <Button
                    android:id="@+id/btn_how_to_get"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:paddingRight="@dimen/paddingLeftRight_button"
                    android:paddingLeft="@dimen/paddingLeftRight_button"
                    android:textAllCaps="false"
                    android:textSize="@dimen/textSize_Button"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_how_to_get"
                    android:background="@drawable/btn_login"
                    android:onClick="viewLocation"
                    android:layout_marginTop="@dimen/btn_marginTop_Normal"
                    android:textColor="@android:color/white"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
                <Button
                    android:id="@+id/btn_company_profile"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:paddingRight="@dimen/paddingLeftRight_button"
                    android:paddingLeft="@dimen/paddingLeftRight_button"
                    android:textAllCaps="false"
                    android:textSize="@dimen/textSize_Button"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_company_profile"
                    android:background="@drawable/btn_login"
                    android:onClick="viewProfile"
                    android:layout_marginTop="@dimen/btn_marginTop_Normal"
                    android:textColor="@android:color/white"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>
